# claude-code

./: .gitignore  AUDIT-orchestration-and-cli-ui.md  feed.xml
docs/: PRYSM-ARCHITECTURE-AND-IMPLEMENTATION-PLAN.md
prysm-cli/: README.md  prysm.json  pyproject.toml
prysm-cli/prysm/: __init__.py  __main__.py  cli.py  repl.py  version.py
prysm-cli/prysm/commands/: __init__.py  base.py  exit_cmd.py  help_cmd.py  model_cmd.py  provider_cmd.py  runtime_cmd.py
prysm-cli/prysm/config/: loader.py  paths.py  schema.py
prysm-cli/prysm/models/: __init__.py  provider.py  registry.py
prysm-cli/prysm/state/: __init__.py  database.py  session.py
prysm-cli/prysm/system/: __init__.py  detector.py  gpu.py
prysm-cli/prysm/ui/: __init__.py  renderer.py  status_bar.py  themes.py
prysm-cli/tests/: __init__.py  conftest.py  test_cli.py  test_commands.py  test_config.py  test_detector.py  test_model_cmd.py  test_provider.py  test_repl.py  test_runtime_cmd.py
scripts/: gh-create-issue.bat  sync-upstream-issues.ps1  sync-upstream-issues.sh  synced-upstream-numbers.json
