[project]
name = "prysm-cli"
version = "0.1.0"
description = "Your models. Your runtime. Your code. — A terminal-first AI coding agent for any LLM."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Prysm Contributors"},
]

keywords = ["llm", "cli", "ai-coding", "local-models", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=13.9",                  # Terminal UI rendering
    "prompt-toolkit>=3.0",         # REPL engine with history, tab-completion
    "pydantic>=2.0",               # Config validation models
    "pydantic-settings>=2.0",      # Settings management with env override
    "httpx>=0.27",                 # HTTP client for API calls
    "click>=8.1",                  # CLI argument parsing
    "pyyaml>=6.0",                 # YAML frontmatter parsing (plugins)
    "platformdirs>=4.0",           # Cross-platform config dir discovery
    "psutil>=5.9",                 # System resource detection (RAM, CPU)
    "keyring>=25.0",               # OS keyring for credential storage
]

[project.optional-dependencies]
py-cpuinfo = [
    "py-cpuinfo>=9.0.0",           # CPU brand, cores, features detection
]
cpu = [
    "llama-cpp-python>=0.3.0",     # Local GGUF inference (CPU)
]
cuda = [
    "llama-cpp-python[cuda]>=0.3.0",  # Local GGUF inference (CUDA)
]
metal = [
    "llama-cpp-python[metal]>=0.3.0", # Local GGUF inference (Metal)
]
transformers = [
    "transformers>=4.40",
    "torch>=2.1",
]
ollama = []                        # No Python dep — uses HTTP API
all-local = [
    "prysm-cli[cpu,cuda,transformers]",
]
development = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
prysm = "prysm.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["prysm*"]
